# lab08

./: CMakeLists.txt  README.md
.github/workflow/: actions.yml
.github/workflows/: Cpack.yml  actions.yml  test1.sh
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
solver_lib/: CMakeLists.txt
